# syakyo-full-stack-fastapi-template

./: .env  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: crud.py  main.py  models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: items.py  login.py  users.py  utils.py
backend/app/core/: config.py  db.py  security.py
backend/app/database/: item.py  item_repo.py  user.py  user_repo.py
backend/app/model/: item.py  message.py  token.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 103efaf6b8c2_create_item_table.py  822dfb4edfa9_create_user_table.py
frontend/: README.md  biome.json  index.html  package-lock.json  package.json
frontend/src/: main.tsx  routeTree.gen.ts  utils.ts
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/components/Common/: Navbar.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: __root.tsx  _layout.tsx  login.tsx  signup.tsx
